--- a/index.html
+++ b/index.html
@@ -15,12 +15,27 @@
   </head>
   <body>
     <header id="header">
-      <h1>Super meme Battle</h1>
+      <h1>Super Meme Battle</h1>
       <button id="start" class="btn-3d">Start</button>
     </header>
 
     <section id="board"></section>
-    <div id="mainGame"></div>
+    <div id="mainGame">
+      <div class="container">
+        <div class="progress-bar">Attack!</div>
+      </div>
+      <hr />
+      <div class="container">
+        <div class="progress-bar">Attack!</div>
+      </div>
+      <div>
+        <progress id="health" value="100" max="100"></progress>
+      </div>
+
+      <div>
+        <progress id="health" value="100" max="100"></progress>
+      </div>
+    </div>
 
     <script src="./game.js"></script>
     <script src="./script.js"></script>
