Botão de corfirmar e funcionalidade

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
 
     <section id="board"></section>
+    <section id="confirmBtn"></section>
     <div id="mainGame">
       <div class="container jogador">
         <div class="progress-bar">Attack!</div>
@@ -33,7 +34,6 @@
         <div class="progress-bar">Attack!</div>
         <hr></hr>
         <progress id="health" value="10" max="10"></progress>
-        <hr></hr>
         <img src="./images/1.jpg" alt="meme">
       </div>
     </div>
