Ajuste em tamanho

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <hr></hr>
         <progress id="health" value="10" max="10"></progress>
         
-        <img src="./images/1.jpg" alt="meme">
+        <img src="./images/1.jpg" alt="meme" id="jogador">
       </div>
       <hr />
       <div class="container oponente">
         <div class="progress-bar">Attack!</div>
         <hr></hr>
         <progress id="health" value="10" max="10"></progress>
-        <img src="./images/1.jpg" alt="meme">
+        <img src="./images/1.jpg" alt="meme" id="oponente">
       </div>
     </div>
 
