esqueleto do jogo pronto

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
       <div class="container jogador">
         <div class="progress-bar">Attack!</div>
         <hr></hr>
-        <progress id="health" value="10" max="10"></progress>
+        <progress id="health-player" value="10" max="10"></progress>
         
         <img src="./images/1.jpg" alt="meme" id="jogador">
       </div>
-      <hr />
+      <hr/>
       <div class="container oponente">
         <div class="progress-bar">Attack!</div>
         <hr></hr>
-        <progress id="health" value="10" max="10"></progress>
+        <progress id="health-oponent" value="10" max="10"></progress>
         <img src="./images/1.jpg" alt="meme" id="oponente">
       </div>
     </div>
