--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <img src="./images/1.jpg" alt="meme" id="oponente">
       </div>
     </div>
+    <div id="retornarBtn"></div>
 
     <script src="./game.js"></script>
     <script src="./script.js"></script>
